adding profile pic plus grids

--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
                         
                         </div>
                         <div class="row">
-                          <div class="col-sm"><img scr=</div>
+                           <div class="row">
+                          <div class="col-sm-2">col-sm</div>
+                          <div class="image"></div>
+                             <img src="/asset/images/Liams_profilepic.png" alt="Liams_profilepic"></div>
                           <div class="col-sm">col-sm</div>
-                          <div class="col-sm">col-sm</div>
+                        
                         </div>
                       </div>
 
