working on background image

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                           </div>
                         </div>
                   </nav>
-                 
+                  <div style="background-image: url('asset/images/lionphotofromdesignerpoint.jpg');">
                   <div class="container">
                         <div class="row">
                           <div class="col-sm-4"><h1>About Me</h1></div>
