added pages and linked

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>Liam Wynne</title>
+  <title>About</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -29,7 +29,7 @@
             <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -41,7 +41,10 @@
       <div class="col-md-4">
         <h2>About Me</h2>
         <img src="asset/images/Liams_profilepic.png" alt="Liams_profilepic" />
-
+        <div>
+          <a class="btn btn-primary btn-xs" href="#" role="button">LinkedIn</a>
+          <a class="btn btn-primary btn-xs" href="#" role="button">Twitter</a>
+        </div>
       </div>
       <div class="col-md-8">
         <p class="lead">Hello, I am Liam Wynne and I am trying to be a developer of websites beyond websites, developers
