added links and more

--- a/index.html
+++ b/index.html
@@ -9,70 +9,81 @@
   <title>Liam Wynne</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
 </head>
+<div class="container">
 
-<body>
-  <div>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">Liam Wynne</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+  <body>
+    <div>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="index.html">Liam Wynne</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="nav navbar-nav navbar-right">
-          <li class="nav-item active">
-            <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
-      </div>
-  </div>
-  </nav>
-  </div>
-  <div class="container">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="nav navbar-nav navbar-right">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+    </div>
+    </nav>
+
+
     <div class="row">
       <div class="col-md-4">
-        <h2>About Me</h2>
+        <div class="card-img-overlay" text="white">
+          <h5>About Me</h5>
+        </div>
         <img src="asset/images/Liams_profilepic.png" alt="Liams_profilepic" />
-
       </div>
+
       <div class="col-md-8">
-        <p class="lead">Hello, I am Liam Wynne and I am trying to be a developer of websites beyond websites, developers
-          GO! (little
-          "Thunder Cats reference"). I currently reside in the Manayunk area of Philadelphia, PA. For years and still, I
-          work in restaurants started out as a dishwasher and moved myself up to management.
-          My favorite hobbies are listening to music, playing volleyball and darts (don't worry it is not a the same
-          time
-          but would be fun to try it though),and recently experiencing new cultures by traveling to different countries.
+        <p class="lead">Hello, I am Liam Wynne and recent certificate holder of a full stack developer from the Penn LPS
+          Coding Bootcamp.
         </p>
       </div>
 
     </div>
-  </div>
-  </div>
 
-  <footer>
-    <div class="card">
-      <div class="card-header">
-        Featured
-      </div>
-      <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <div>
-          <a class="btn btn-primary btn-xs" href="#" role="button">LinkedIn</a>
-          <a class="btn btn-primary btn-xs" href="#" role="button">Twitter</a>
+
+
+    <footer>
+      <div class="card">
+        <div class="card-header">
+          Copyright
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Social Media</h5>
+          <p class="card-text"></p>
+          <div>
+            <a class="btn btn-primary btn-xs" href="https://www.linkedin.com/in/liam-wynne-215phl/" role="button">LinkedIn</a>
+            <a class="btn btn-primary btn-xs" href="https://twitter.com/liamdeclan83" role="button">Twitter</a>
+          </div>
         </div>
       </div>
-    </div>
-  </footer>
+    </footer>
 
-</body>
+  </body>
+</div>
+</div>
+</div>
+
 </html>
