--- a/portfolio.html
+++ b/portfolio.html
@@ -8,50 +8,105 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </head>
+<div class="container">
 
-<body>
-    <div>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html">Liam Wynne</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+    <body>
+        <div>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="index.html">Liam Wynne</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="about.html">About <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
+                <div class="collapse navbar-collapse" id="navbarbuttons">
+                    <ul class="nav justify-content-end">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+
+        <div class="container">
+            <div class="card" style="width:300px">
+                <img class="card-img-top" src="asset\images\crystals.jpg" alt="CrystalCollector">
+                <div class="card-img-overlay">
+                    <h5 class="card-title">CrystalCollector</h5>
+                    <a href="https://lwynne8353.github.io/CrystalCollector/" class="button">To View</a>
+                </div>
             </div>
-    </div>
-    </nav>
-    </div>
-
-    <footer>
-        <div class="card">
-            <div class="card-header">
-                Featured
+            <div class="card" style="width:300px">
+                <img class="card-img-top" src="asset\images\kevinhart.jpg" alt="KevinHart">
+                <div class="card-img-overlay">
+                    <h5 class="card-title">ComedianFriendFinder</h5>
+                    <a href="https://lwynne8353.github.io/ComedianFriendFinder/" class="button">To View</a>
+                </div>
             </div>
-            <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <div>
-                    <a class="btn btn-primary btn-xs" href="#" role="button">LinkedIn</a>
-                    <a class="btn btn-primary btn-xs" href="#" role="button">Twitter</a>
+            <div class="card" style="width:300px">
+                <img class="card-img-top" src="asset\images\muppetsjimhenson.jpg" alt="Muppets">
+                <div class="card-img-overlay">
+                    <h5 class="card-title">Muppet-Tastic</h5>
+                    <a href="https://lwynne8353.github.io/GifTastic/" class="button">To View</a>
+                </div>
+            </div>
+            <div class="card" style="width:300px">
+                <img class="card-img-top" src="asset\images\train.jpg" alt="Train">
+                <div class="card-img-overlay">
+                    <h5 class="card-title">TrainSchedule</h5>
+                    <a href="https://lwynne8353.github.io/TrainSchedule/" class="button">To View</a>
+                </div>
+            </div>
+            <div class="card" style="width:300px">
+                <img class="card-img-top" src="asset\images\mysql.jpg" alt="LiriBot">
+                <div class="card-img-overlay">
+                    <h5 class="card-title">TheArtOfNode</h5>
+                    <a href="https://youtu.be/xvlerAm93Yo" class="button">To View</a>
                 </div>
             </div>
         </div>
-    </footer>
 
-</body>
+
+
+
+
+
+        <footer>
+            <div class="card">
+                <div class="card-header">
+                    Copyright
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Social Media</h5>
+                    <p class="card-text"></p>
+                    <div>
+                        <a class="btn btn-primary btn-xs" href="https://www.linkedin.com/in/liam-wynne-215phl/" role="button">LinkedIn</a>
+                        <a class="btn btn-primary btn-xs" href="https://twitter.com/liamdeclan83" role="button">Twitter</a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+    </body>
+</div>
+</div>
 
 </html>
